# EUI-NEO-Android

./: .gitignore  CLAUDE.md  README.md
android/: README.md  build.gradle.kts  gradle.properties  settings.gradle.kts
android/app/: CMakeLists.txt  build.gradle.kts
android/app/src/main/: AndroidManifest.xml
android/app/src/main/cpp/: android_app.cpp  android_main.cpp  eui_android_config.h
android/app/src/main/cpp/glad_gles/glad/: glad.h
android/app/src/main/cpp/glfw_shim/: glfw_shim.cpp
android/app/src/main/cpp/glfw_shim/GLFW/: glfw3.h
android/app/src/main/java/com/eui/neo/: EuiActivity.kt
android/app/src/main/res/values/: strings.xml
components/: dropdown.h  scrollview.h
core/: event.h  image.cpp  ime_bridge.c  primitive.h  text.cpp
